# photon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  windows_build_cmake.bat
core/: camera.cpp  camera.h  camera.hpp  color.hpp  photon.cpp  photon.h  test_world.cpp  test_world.h  test_worlds.hpp
data/: test.ppm  world_case_2.ppm
math/: color3d.hpp  color3f.hpp  common_math.h  common_math.hpp  point3.hpp  point3d.hpp  point3f.hpp  ray.hpp  ray3d.hpp  ray3f.hpp  vec3.hpp  vec3d.hpp  vec3f.hpp
platform/win32/: win32_photon.cpp  win32_photon.h
vendors/: obj.h
